# image-tag-service

./: .gitignore  SETUP_NVIDIA.md  pyproject.toml  run_backend.py  run_tag.py
backend/: __main__.py  app.py  requirements.txt
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.js
tag/: __init__.py  classifier.py  database.py  likes_loader.py  scanner.py
