[project]
name = "image-tag-service"
version = "0.3.0"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "pillow>=10.0",
    "numpy>=1.23",
    "huggingface-hub>=0.20",
    "open-clip-torch>=2.20",
    "onnxruntime-gpu>=1.24.3",
    "torch",
    "torchvision",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"
