[project]
name = "image-tag-service"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139",
    "uvicorn[standard]>=0.51",
    "pillow>=10.0",
    "numpy>=1.23",
    "huggingface-hub>=0.20",
    "open-clip-torch>=2.20",
    "onnxruntime-gpu==1.26.0",
    "torch",
    "torchvision",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"
